--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fontsource-variable/inter": "^5.0.20",
     "axios": "^1.7.2",
     "canvas-confetti": "^1.9.3",
     "jwt-decode": "^4.0.0",
